--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -8,9 +8,10 @@ on:
 jobs:
   deploy-blog:
     runs-on: ubuntu-latest
-    
-    env: 
-      DAY_OF_WEEK: Mon
+
+    env:
+      REPO_NAME: hugo-test
+      GITHUB_ACCOUNT: darrenli1256
 
     steps:
       - name: Checkout the repo
@@ -25,3 +26,33 @@ jobs:
           cd ~
           wget https://github.com/gohugoio/hugo/releases/download/v0.83.1/hugo_extended_0.83.1_Linux-64bit.tar.gz
           tar zxvf hugo_extended_0.83.1_Linux-64bit.tar.gz
+
+      - name: Inspection
+        env:
+          test_secret: ${{secrets.NEW_TEXT_PAT}}
+        run: |
+          cd /home/runner/work/${{env.REPO_NAME}}/${{env.REPO_NAME}}/source/
+          ls -la
+          echo "$test_secret"
+
+      - name: Checkout blog page content
+        uses: actions/checkout@v2
+        with:
+          repository: ${{env.GITHUB_ACCOUNT}}/${{env.GITHUB_ACCOUNT}}.github.io
+          path: blog
+          token: ${{secrets.NEW_TEXT_PAT}}
+
+      - name: Copy content and push
+        run: |
+          cd /home/runner/work/${{env.REPO_NAME}}/${{env.REPO_NAME}}/blog/
+          git config --global user.email "carricanbuild@gmail.com"
+          git config --global user.name "DarrenBlog"
+          rm -rf ./*
+          cp -a /home/runner/work/${{env.REPO_NAME}}/${{env.REPO_NAME}}/source/docs/. .
+          git add .
+          git commit -m "Update blog"
+          git push
+
+
+
+
