--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -29,11 +29,10 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: 'latest'
+          hugo-version: '0.91.2'
+          # extended: true
 
       - name: Build Site
-        env:
-          test_secret: ${{secrets.NEW_TEXT_PAT}}
         run: |
           cd /home/runner/work/${{env.REPO_NAME}}/${{env.REPO_NAME}}/${{env.BLOG_SOURCE_DIR}}/
           hugo --minify
